# zero-degrees

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  api-changerequest.md
api-changerequests/: card-flow.md  course-search.md  hurdle-metadata.md  progression.md  team-screens.md
assets/models/: preview.html
crates/backend/: Cargo.toml
crates/backend/migrations/: 0001_create_players.sql  0002_create_track_objects.sql  0101_create_messages.sql  0102_add_seed_columns.sql  0102_create_messages.sql  0103_add_message_categories.sql  0103_create_messages.sql  0104_add_urgency_scoring.sql  0104_create_messages.sql  0105_create_messages.sql  0106_add_message_summary.sql  (+20 more)
crates/game/: Cargo.toml
crates/game/assets/sprites/: idle.json  run.json  wave.json
crates/game/src/: assets.rs  binoculars.rs  boss.rs  card.rs  dashboard.rs  feedback.rs  filter.rs  game.rs  hazards.rs  hub.rs  inbox.rs  input.rs  leaderboard.rs  main.rs  meta.rs  profile.rs  progress.rs  reply.rs  save.rs  score.rs  screens.rs  team.rs  track.rs  trophies.rs  view.rs
crates/shared/: Cargo.toml
tools/: render_sprites.py
user-stories/: 001-the-track.md  002-course-generator.md  003-hurdle-types.md  004-hurdle-height.md  005-mood-auras.md  006-scout-report.md  007-reply-powerup.md  008-taking-the-hurdle.md  009-track-order.md  010-hazard-zones.md  011-race-control.md  012-binoculars.md  013-relay-handoff.md  014-burning-hurdles.md  015-xp-and-combos.md  016-daily-runs-and-streaks.md  017-league-leaderboard.md  018-trophy-room.md  019-backlog-boss-battle.md  020-coach-feedback.md
(+52 files in other folders)
